src/test/resources/Parser/SyntaxErrors/TwoSuperClasses.front
class Base : A, B {}
class A {}
class B {}